# tascal

./: Makefile  README.md  compose.yaml
api/: Dockerfile  openapi.yaml
api/components/schemas/: Task.yaml  TaskStatus.yaml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/api-server/: Cargo.toml
backend/api-server/openapi/: README.md
backend/api-server/openapi/src/: lib.rs  models.rs
backend/api-server/openapi/src/apis/: default.rs
backend/api-server/openapi/src/server/: mod.rs
backend/api-server/server/: Cargo.toml
backend/api-server/server/src/: main.rs
backend/api-server/src/: main.rs
backend/app/: Cargo.toml
backend/app/src/: main.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs  task.rs  task_repo.rs
backend/crates/infra/api-server/openapi/: Cargo.toml  README.md
backend/crates/infra/api-server/openapi/src/: models.rs
backend/crates/infra/api-server/server/: Cargo.toml
backend/crates/infra/db/: Cargo.toml
backend/crates/infra/db/src/: connection.rs  lib.rs  task_repo.rs
backend/crates/usecase/src/: task.rs
backend/domain/src/: task.rs  task_repo.rs
backend/usecase/: Cargo.toml
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/api/: api.ts  base.ts  common.ts  configuration.ts  index.ts
frontend/src/api/.openapi-generator/: FILES
frontend/src/api/api/: default-api.ts
frontend/src/api/model/: index.ts  task-status.ts  task.ts  tasks-get-request.ts  tasks-get200-response-inner.ts
(+4 files in other folders)
