[package]
name = "tascal"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../crates/domain" }
usecase = { path = "../crates/usecase" }
server = { path = "../crates/infra/api-server/server" }
db = { path = "../crates/infra/db" }

tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.6"
anyhow = "1.0.95"
